--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "~5.1.5",
     "@react-navigation/stack": "~5.2.10",
     "expo": "~40.0.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "~7.9.0",
     "lodash": "^4.17.21",
